[userpages ShareSidebar] Fix edited dot being cut off by overflow: hidden.

--- a/app/src/userpages/components/ShareSidebar/ShareSidebar.pcss
+++ b/app/src/userpages/components/ShareSidebar/ShareSidebar.pcss
@@ -55,6 +55,7 @@
   .input {
     font-size: 14px;
     line-height: normal;
+    background-color: #FDFDFD;
   }
 
   .button {
@@ -189,11 +190,12 @@
     }
 
     .permissionsHeader h4 {
-      padding-bottom: 1.5um;
+      padding-bottom: calc(1.5um - 4px);
     }
   }
 
   .groupSelector {
+    padding-top: 4px;
     margin-bottom: 1.4um;
   }
 
